# sdl2-dev

./: CMakeLists.txt  HOW TO UPDATE.txt  HOW_TO_UPDATE.md  README.md
sdl2/: CMakeLists.txt
sdl2/src/events/: SDL_touch_c.h  scancodes_linux.h  scancodes_windows.h  scancodes_xfree86.h
sdl2/src/video/haiku/: SDL_bkeyboard.h
